<resources>
    // Activity Principal
    <string name="app_name">TALLER_01</string>
    <string name="sr_registroPersonas">REGISTRO DE PERSONAS</string>
    <string name="sr_primerNombre">PRIMER NOMBRE</string>
    <string name="sr_segundoNombre">SEGUNDO NOMBRE</string>
    <string name="sr_primerApellido">PRIMER APELLIDO</string>
    <string name="sr_segundoApellido">SEGUNDO APELLIDO</string>
    <string name="sr_edad">EDAD</string>
    <string name="sr_sexo">SEXO</string>
    <string name="sr_mostrar">MOSTRAR</string>
    <string name="sr_limpiar">LIMPIAR</string>
    //Activity MostrarInfo
    <string name="sr_hola"> Hola </string>
    <string name="sr_tu"> tu edad es: </string>
    <string name="sr_soy"> soy </string>
    <string name="sr_sex"> y tu sexo es : </string>
    //Errores
    <string name="sr_error_1">Por favor digite el primer nombre</string>
    <string name="sr_error_2">Por favor digite el segundo nombre</string>
    <string name="sr_error_3">Por favor digite el primer apellido</string>
    <string name="sr_error_4">Por favor digite el segundo apellido</string>
    <string name="sr_error_5">Por favor digite la edad</string>
    <string name="sr_error_5_1">Edad entre 1 a 100</string>
    <string name="sr_error_6">Por favor digite el sexo</string>
</resources>
